Upgraded playlist behavior, added video progress and tray feature, fixed some minor bugs
